Lab_1/Ejercicio_2/build/log/idf_py_stderr_output_70769
Command: make -j 10 all
CMake Deprecation Warning at /Users/diegogiordano/esp/idf/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/Users/diegogiordano/dev/universidad/embedded_systems/rep_se_202501_Jorge_Gomez/Lab_1/Ejercicio_2/main/Ejercicio_2.c: In function 'app_main':
/Users/diegogiordano/dev/universidad/embedded_systems/rep_se_202501_Jorge_Gomez/Lab_1/Ejercicio_2/main/Ejercicio_2.c:54:28: error: format '%u' expects argument of type 'unsigned int', but argument 2 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
   54 |     printf("Total cycles: %u\n", cycles);
      |                           ~^     ~~~~~~
      |                            |     |
      |                            |     uint32_t {aka long unsigned int}
      |                            unsigned int
      |                           %lu
/Users/diegogiordano/dev/universidad/embedded_systems/rep_se_202501_Jorge_Gomez/Lab_1/Ejercicio_2/main/Ejercicio_2.c:25:34: warning: unused variable 'end_instructions' [-Wunused-variable]
   25 |     uint32_t start_instructions, end_instructions;
      |                                  ^~~~~~~~~~~~~~~~
/Users/diegogiordano/dev/universidad/embedded_systems/rep_se_202501_Jorge_Gomez/Lab_1/Ejercicio_2/main/Ejercicio_2.c:25:14: warning: unused variable 'start_instructions' [-Wunused-variable]
   25 |     uint32_t start_instructions, end_instructions;
      |              ^~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/Ejercicio_2.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
